# fairness-im-maschinellen-lernen

./: README.md  index.html  pyproject.toml  script.js  style.css
.github/workflows/: docs.yml
fairness_im_maschinellen_lernen/utils/: logger.py
tests/: __init__.py  test_true.py
vega/: chart.json  hist.json  hist_large.json  hist_large_2.json  simplehist.json  theme.json
